# se-simulator

./: .gitignore  .gitmodules  README.md  app.py  apply_colors.py  basemodel.py  config.sample.py  consume.py  count.txt  create.py  extra_data.py  markov.py  models.py  parsexml.py  pyproject.toml  requirements.txt  server.py  shuffle.py  test_generator.py  text_generator.py  todb.py  updater.py  utils.py
templates/: base.html  detail.html  list.html  macros.html  quiz.html
web/static/css/: style.css  style.css.map  style.scss.css  style.scss.css.map
web/static/js/: app.js
web/static/sass/: _awesomplete.base.scss  _awesomplete.custom.scss  _pagination.scss  _variables.scss  style.scss
