[tool.poetry]
name = "stackdata"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.0"
Flask-Limiter = "^1.1.0"
Flask-Session = "^0.4.0"
gunicorn = "^20.0.4"
libsass = "^0.21.0"
Pillow = "^8.1.0"
sentry-sdk = {extras = ["flask"], version = "^1.1.0"}
peewee = "^3.13.1"
markovify = "^0.9.0"
PyMySQL = "^1.0.0"
redis = "^3.5.3"
setproctitle = "^1.2.1"

[tool.poetry.dev-dependencies]
jsonlines = "^2.0.0"
lxml = "^4.4.2"
requests = "^2.22.0"
internetarchive = "^2.0.3"
python-slugify = "^5.0.0"
beautifulsoup4 = "^4.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
