[tool.poetry]
name = "stackdata"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-Limiter = "^3.6.0"
Flask-Session = "^0.8.0"
gunicorn = "^22.0.0"
libsass = "^0.23.0"
Pillow = "^10.3.0"
sentry-sdk = {extras = ["flask"], version = "^2.0.1"}
peewee = "^3.13.1"
markovify = "^0.9.0"
PyMySQL = "^1.0.0"
redis = "^5.0.0"
setproctitle = "^1.2.1"
setuptools = "^69.5.1"

[tool.poetry.dev-dependencies]
jsonlines = "^4.0.0"
lxml = "^5.0.0"
requests = "^2.22.0"
internetarchive = "^4.0.0"
python-slugify = "^8.0.0"
beautifulsoup4 = "^4.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
