[project]
name = "stackdata"
version = "0.1.0"
description = ""
authors = [{ name = "Lukas Winkler", email = "git@lw1.at" }]
requires-python = ">=3.11,<4"
dependencies = [
    "Flask>=3.0.0,<4",
    "gunicorn>=25.0.0,<26",
    "Pillow>=12.0.0,<13",
    "peewee>=4.0.0,<5",
    "markovify>=0.9.0,<0.10",
    "PyMySQL>=1.0.0,<2",
    "setproctitle>=1.2.1,<2",
]

[optional-dependencies]
dev = [
    "jsonlines>=4.0.0,<5",
    "lxml>=6.0.0,<7",
    "requests>=2.22.0,<3",
    "internetarchive>=5.0.0,<6",
    "python-slugify>=8.0.0,<9",
    "beautifulsoup4>=4.8.1,<5",
]

